Styling + template aangemaakt.

--- a/assets/less/style.less
+++ b/assets/less/style.less
@@ -1,4 +1,12 @@
 .container-fluid{
+  #B{
+    height: 50%;
+    background-color: red;
+  }
+  #O{
+    height: 50%;
+    background-color: green;
+  }
   #L{
     height: 100%;
     background-color: red;
