--- a/assets/less/style.less
+++ b/assets/less/style.less
@@ -11,6 +11,14 @@
     height: 100%;
     background-color: red;
   }
+  #R50{
+    height: 100%;
+    background-color: red;
+  }
+  #L50{
+    height: 100%;
+    background-color: blue;
+  }
   .row{
     #Rb{
       height: 50%;
