new template + styling + new directory for said templates.

--- a/assets/less/style.less
+++ b/assets/less/style.less
@@ -11,6 +11,12 @@
     height: 100%;
     background-color: red;
   }
+  #R{
+    height: 100%;
+    background-color: red;
+    right: 0;
+    position: absolute;
+  }
   #R50{
     height: 100%;
     background-color: red;
@@ -30,6 +36,22 @@
       height: 50%;
       top: 50%;
       right: 0;
+      background-color: blue;
+      position: absolute;
+    }
+    .right{
+      right:0;
+    }
+    #Lb{
+      height: 50%;
+      left: 0;
+      background-color: green;
+      position: absolute;
+    }
+    #Lo{
+      height: 50%;
+      top: 50%;
+      left: 0;
       background-color: blue;
       position: absolute;
     }
