Added styling. Added logo.
Added styling for header.php and fullscreen template. Added an img, the logo used in header.php.

--- a/assets/less/style.less
+++ b/assets/less/style.less
@@ -1,4 +1,17 @@
+.header-logo{
+  img{
+    width: 300px;
+    height: auto;
+    position: absolute;
+    z-index: 99;
+  }
+}
+
 .container-fluid{
+  #fullscreen{
+    height: 100%;
+    background-color: green;
+  }
   #B{
     height: 50%;
     background-color: red;
