included styling parsing on header.php (Less.js) so that image is as intended. + styling for said image in style.less.

--- a/assets/less/style.less
+++ b/assets/less/style.less
@@ -1,7 +1,8 @@
 .header-logo{
+  height: 60px;
   img{
-    width: 300px;
-    height: auto;
+    width: auto;
+    height: 60px;
     position: absolute;
     z-index: 99;
   }
