--- a/assets/less/style.less
+++ b/assets/less/style.less
@@ -8,6 +8,17 @@
   }
 }
 
+.no-margin{
+  margin-left: 0 !important;
+  margin-right: 0 !important;
+  div{
+    width: 100%;
+  }
+}
+td{
+  width: 0;
+}
+
 .container-fluid{
   #fullscreen{
     height: 100%;
