NS component has full styling and should be responsive on smaller screens or smaller templates!

--- a/assets/less/style.less
+++ b/assets/less/style.less
@@ -8,15 +8,36 @@
   }
 }
 
+#nsLogo{
+  height: 100px;
+  float: right;
+}
+
 .no-margin{
   margin-left: 0 !important;
   margin-right: 0 !important;
   div{
     width: 100%;
+    padding: 40px;
+    background-color: #FEE767;
   }
 }
-td{
-  width: 0;
+
+table{
+  th{
+    color: #040156;
+    font-weight: bold;
+    font-size: 20px;
+  }
+  td{
+    width: 0;
+    color: #040156;
+    font-weight: bold;
+    img{
+      height: 40px;
+      width: auto;
+    }
+  }
 }
 
 .container-fluid{
