--- a/assets/less/style.less
+++ b/assets/less/style.less
@@ -102,3 +102,11 @@ table{
     }
   }
 }
+.radarCenter{
+  border-top: 1px solid black;
+  text-align: center;
+  padding-top: 2%;
+}
+#center{
+  display:flex;
+}
