--- a/assets/less/style.less
+++ b/assets/less/style.less
@@ -106,4 +106,55 @@ table{
       position: absolute;
     }
   }
+  .blue{
+    background-color: #005E7E;
+    color: #D79700;
+    img{
+      float:right;
+      height: 60px;
+    }
+    .col-2{
+      border-right: 1px solid white;
+      border-bottom: 2px solid white;
+    }
+    .col-10{
+      border-left: 1px solid white;
+      border-bottom: 2px solid white;
+    }
+    h1{
+      margin-top: 5%;
+    }
+    h2{
+      padding:10px;
+      margin-top:0.5%;
+    }
+  }
+  .mac-list{
+    min-height: 92%;
+    max-height: 100%;
+    background-color: #005E7E;
+    position: absolute;
+    border-right: 1px solid white;
+    padding-bottom: 20px;
+    h3{
+      padding-top: 20px;
+      color: #D79700;
+    }
+    p{
+      color: #D79700;
+    }
+    li{
+      list-style: none;
+      a{
+        //background-color: white;
+        padding: 4px;
+        //border-radius: 30px;
+        color: #D79700;
+        font-weight: bold;
+      }
+      &:first-of-type{
+        padding-top: 10px;
+      }
+    }
+  }
 }
