finished the dashboard template.

--- a/assets/less/style.less
+++ b/assets/less/style.less
@@ -109,6 +109,7 @@ table{
   .blue{
     background-color: #005E7E;
     color: #D79700;
+    z-index: 3;
     img{
       float:right;
       height: 60px;
@@ -116,10 +117,17 @@ table{
     .col-2{
       border-right: 1px solid white;
       border-bottom: 2px solid white;
+      z-index: 3;
+      background-color: #005E7E;
     }
     .col-10{
       border-left: 1px solid white;
       border-bottom: 2px solid white;
+      z-index: 3;
+      background-color: #005E7E;
+      p{
+        padding-top:1.5%;
+      }
     }
     h1{
       margin-top: 5%;
@@ -130,18 +138,21 @@ table{
     }
   }
   .mac-list{
-    min-height: 92%;
-    max-height: 100%;
+    height: 100%;
     background-color: #005E7E;
     position: absolute;
     border-right: 1px solid white;
     padding-bottom: 20px;
+    top: 0;
+    padding-top: 100px;
+    z-index: 2;
     h3{
       padding-top: 20px;
       color: #D79700;
     }
     p{
       color: #D79700;
+      font-size: 0.8em;
     }
     li{
       list-style: none;
@@ -156,5 +167,14 @@ table{
         padding-top: 10px;
       }
     }
+  }
+  .templates{
+    height: 100%;
+    background-color: #710f58;
+    position: absolute;
+    right: 0;
+    top: 0;
+    z-index:2;
+    border-left: 1px solid white;
   }
 }
