--- a/assets/less/style.less
+++ b/assets/less/style.less
@@ -108,7 +108,7 @@ table{
   }
 }
 
-.radarCenter{
+.centerTopSolid{
   border-top: 1px solid black;
   text-align: center;
   padding-top: 2%;
@@ -191,3 +191,11 @@ table{
     z-index:2;
     border-left: 1px solid white;
   }
+#footer{
+  position: absolute;
+  bottom: 0;
+  width: 100%;
+  height: 60px;
+  line-height: 60px;
+  background-color: #f5f5f5;
+}
