Overall styling of the dashboard and CMS menu.

--- a/assets/less/style.less
+++ b/assets/less/style.less
@@ -32,7 +32,7 @@
   margin-right: auto;
 }
 
-table{
+.ns-table{
   th{
     color: #040156;
     font-weight: bold;
@@ -47,6 +47,48 @@ table{
       width: auto;
     }
   }
+}
+
+.btn-add-admin{
+  background-color: white;
+  border: 0 solid  white;
+  border-radius: 20px;
+  color: black;
+  float: right;
+  position: relative;
+  margin-top: -3px;
+  padding-bottom: 3px;
+  padding-left: 10px;
+  padding-right: 10px;
+  padding-top: 2px;
+}
+
+.btn-add-screen{
+  background-color: white;
+  border: 0 solid  white;
+  border-radius: 20px;
+  color: black;
+  float: right;
+  position: relative;
+  margin-top: -3px;
+  padding-bottom: 3px;
+  padding-left: 10px;
+  padding-right: 10px;
+  padding-top: 2px;
+}
+
+.btn-add-component{
+  background-color: white;
+  border: 0 solid  white;
+  border-radius: 20px;
+  color: black;
+  float: right;
+  position: relative;
+  margin-top: -3px;
+  padding-bottom: 3px;
+  padding-left: 10px;
+  padding-right: 10px;
+  padding-top: 2px;
 }
 
 .container-fluid{
