added several buttons and styling (front end)

--- a/assets/less/style.less
+++ b/assets/less/style.less
@@ -12,6 +12,42 @@
   }
 }
 
+.btn-options{
+  background-color: #095F59;
+  border: 0 solid  white;
+  border-radius: 20px;
+  color: white;
+  margin-top: 10px;
+  padding-bottom: 3px;
+  padding-left: 10px;
+  padding-right: 10px;
+  padding-top: 2px;
+}
+
+.btn-edit{
+  background-color: #095F59;
+  border: 0 solid  white;
+  border-radius: 20px;
+  color: white;
+  margin-top: -3px;
+  padding-bottom: 3px;
+  padding-left: 10px;
+  padding-right: 10px;
+  padding-top: 2px;
+}
+
+.btn-delete{
+  background-color: #095F59;
+  border: 0 solid  white;
+  border-radius: 20px;
+  color: white;
+  margin-top: 10px;
+  padding-bottom: 3px;
+  padding-left: 10px;
+  padding-right: 10px;
+  padding-top: 2px;
+}
+
 #nsLogo{
   height: 100px;
   float: right;
