removed text from buttons, added round button styling.

--- a/assets/less/style.less
+++ b/assets/less/style.less
@@ -14,38 +14,41 @@
 
 .btn-options{
   background-color: #095F59;
-  border: 0 solid  white;
-  border-radius: 20px;
+  border: 0 solid white;
+  border-radius: 100%;
   color: white;
-  margin-top: 10px;
-  padding-bottom: 3px;
-  padding-left: 10px;
-  padding-right: 10px;
-  padding-top: 2px;
+  /* padding-bottom: 3px; */
+  /* padding-left: 10px; */
+  /* padding-right: 10px; */
+  /* padding-top: 2px; */
+  padding: 20px;
+  font-size: 1em;
 }
 
 .btn-edit{
   background-color: #095F59;
-  border: 0 solid  white;
-  border-radius: 20px;
+  border: 0 solid white;
+  border-radius: 100%;
   color: white;
-  margin-top: -3px;
-  padding-bottom: 3px;
-  padding-left: 10px;
-  padding-right: 10px;
-  padding-top: 2px;
+  /* padding-bottom: 3px; */
+  /* padding-left: 10px; */
+  /* padding-right: 10px; */
+  /* padding-top: 2px; */
+  padding: 20px;
+  font-size: 1em;
 }
 
 .btn-delete{
   background-color: #095F59;
-  border: 0 solid  white;
-  border-radius: 20px;
+  border: 0 solid white;
+  border-radius: 100%;
   color: white;
-  margin-top: 10px;
-  padding-bottom: 3px;
-  padding-left: 10px;
-  padding-right: 10px;
-  padding-top: 2px;
+  /* padding-bottom: 3px; */
+  /* padding-left: 10px; */
+  /* padding-right: 10px; */
+  /* padding-top: 2px; */
+  padding: 20px;
+  font-size: 1em;
 }
 
 #nsLogo{
